migration-result/ver/16.x/access-controls/access-request-plugins/ssh-approval-msteams.mdx
---
title: Access Requests with Microsoft Teams
description: How to set up Teleport's Microsoft Teams plugin for privilege elevation approvals.
version: '16.x'
---

This guide will explain how to set up Microsoft Teams to receive Access Request messages
from Teleport. Teleport's Microsoft Teams integration notifies individuals of
Access Requests. Users can then approve and deny Access Requests by following the
message link, making it easier to implement security best practices without
compromising productivity.

![The Microsoft Teams Access Request plugin](../../../../../assets/msteams-c50df8bb2f.png)

## Prerequisites

- Access to an Enterprise edition of Teleport running in your environment.

  For information about the differences between Teleport editions, see [Comparing
  editions](/ver/16.x/choose-an-edition/introduction#comparing-editions).

- The Enterprise `tctl` admin tool and `tsh` client tool version >= 15.0.0-dev.

  You can verify the tools you have installed by running the following commands:

  ```code
  $ tctl version
  # Teleport Enterprise v15.0.0-dev go1.21

  $ tsh version
  # Teleport v15.0.0-dev go1.21
  ```

  You can download these tools by following the appropriate [Installation
  instructions](/ver/16.x/installation#installation-instructions) for your environment and Teleport edition.

**Recommended:** Configure Machine ID to provide short-lived Teleport
credentials to the plugin. Before following this guide, follow a Machine ID
[deployment guide](/ver/16.x/machine-id/deployment) to run the `tbot` binary on
your infrastructure.

- A Microsoft Teams License (Microsoft 365 Business).
- Azure console access in the organization/directory holding the Microsoft Teams
  License.
- An Azure resource group in the same directory. This will  host resources for
  the the Microsoft Teams Access Request plugin. You should have enough
  permissions to create and edit Azure Bot Services in this resource group.
- Someone with Global Admin rights on the Azure Active Directory that will grant
  permissions to the plugin.
- Someone with the `Teams administrator` role that can approve installation
  requests for Microsoft Teams Apps.
- Either an Azure virtual machine or Kubernetes cluster where you will run the
  Teleport Microsoft Teams plugin.

To check that you can connect to your Teleport cluster, sign in with `tsh login`, then
verify that you can run `tctl` commands using your current credentials.
`tctl` is supported on macOS and Linux machines.

For example:

```code
$ tsh login --proxy=teleport.example.com --user=email@example.com
$ tctl status
# Cluster  teleport.example.com
# Version  15.0.0-dev
# CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
```

If you can connect to the cluster and run the `tctl status` command, you can use your
current credentials to run subsequent `tctl` commands from your workstation.
If you host your own Teleport cluster, you can also run `tctl` commands on the computer that
hosts the Teleport Auth Service for full permissions.

## Step 1/9. Define RBAC resources

Before you set up the Microsoft Teams plugin, you will need to enable Role Access Requests
in your Teleport cluster.

For the purpose of this guide, we will define an `editor-requester` role, which
can request the built-in `editor` role, and an `editor-reviewer` role that can
review requests for the `editor` role.

Create a file called `editor-request-rbac.yaml` with the following content:

```yaml
kind: role
version: v5
metadata:
  name: editor-reviewer
spec:
  allow:
    review_requests:
      roles: ['editor']
---
kind: role
version: v5
metadata:
  name: editor-requester
spec:
  allow:
    request:
      roles: ['editor']
      thresholds:
        - approve: 1
          deny: 1
```

Create the roles you defined:

```code
$ tctl create -f editor-request-rbac.yaml
role 'editor-reviewer' has been created
role 'editor-requester' has been created
```

Allow yourself to review requests by users with the `editor-requester` role by
assigning yourself the `editor-reviewer` role.

Assign the `editor-reviewer` role to your Teleport user by running the appropriate
commands for your authentication provider:

<Tabs>
  <Tab title="Local User">
    1. Retrieve your local user's configuration resource:

       ```code
       $ tctl get users/$(tsh status -f json | jq -r '.active.username') > out.yaml
       ```

    2. Edit `out.yaml`, adding `editor-reviewer` to the list of existing roles:

       ```diff
         roles:
          - access
          - auditor
          - editor
       +  - editor-reviewer 
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f out.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="GitHub">
    1. Retrieve your `github` authentication connector:

       ```code
       $ tctl get github/github --with-secrets > github.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `github.yaml` file. Because this key contains a sensitive value, you should remove the
       github.yaml file immediately after updating the resource.

    2. Edit `github.yaml`, adding `editor-reviewer` to the `teams_to_roles` section.

       The team you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the team must include your user account and
       should be the smallest team possible within your organization.

       Here is an example:

       ```diff
         teams_to_roles:
           - organization: octocats
             team: admins
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f github.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="SAML">
    1. Retrieve your `saml`  configuration resource:

       ```code
       $ tctl get --with-secrets saml/mysaml > saml.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `saml.yaml` file. Because this key contains a sensitive value, you should remove the
       saml.yaml file immediately after updating the resource.

    2. Edit `saml.yaml`, adding `editor-reviewer` to the `attributes_to_roles` section.

       The attribute you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the group must include your
       user account and should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         attributes_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f saml.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="OIDC">
    1. Retrieve your `oidc`  configuration resource:

       ```code
       $ tctl get oidc/myoidc --with-secrets > oidc.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `oidc.yaml` file. Because this key contains a sensitive value, you should remove the
       oidc.yaml file immediately after updating the resource.

    2. Edit `oidc.yaml`, adding `editor-reviewer` to the `claims_to_roles` section.

       The claim you should map to this role depends on how you have designed your organization's
       role-based access controls (RBAC). However, the group must include your user account and
       should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         claims_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f oidc.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>
</Tabs>

Create a user called `myuser` who has the `editor-requester` role. This user
cannot edit your cluster configuration unless they request the `editor` role:

```code
$ tctl users add myuser --roles=editor-requester 
```

`tctl` will print an invitation URL to your terminal. Visit the URL and log in
as `myuser` for the first time, registering credentials as configured for your
Teleport cluster.

Later in this guide, you will have `myuser` request the `editor` role so you can
review the request using the Teleport plugin.

## Step 2/9. Install the Teleport Microsoft Teams plugin

Install the Microsoft Teams plugin on your workstation. If you are deploying the
plugin on Kubernetes, you will still need to install the plugin locally in order
to generate an application archive to upload later in this guide.

<Tabs>
  <Tab title="Download">
    We currently only provide `linux-amd64` binaries. You can also compile these
    plugins from source. You can run the plugin from a remote host or your local
    development machine.

    ```code
    $ curl -L -O https://get.gravitational.com/teleport-access-msteams-v13.3.7-linux-amd64-bin.tar.gz
    $ tar -xzf teleport-access-msteams-v13.3.7-linux-amd64-bin.tar.gz
    $ cd teleport-access-msteams
    $ sudo ./install
    ```

    Make sure the binary is installed:

    ```code
    $ teleport-msteams version
    teleport-msteams v13.3.7 git:teleport-msteams-v13.3.7-fffffffff go1.21
    ```
  </Tab>

  <Tab title="Docker Image">
    We currently only provide Docker images for `linux-amd64`.
    Pull the Docker image for the latest access request plugin by running the following command:

    ```code
    $ docker pull public.ecr.aws/gravitational/teleport-plugin-msteams:13.3.7
    ```

    Make sure the plugin is installed by running the following command:

    ```code
    $ docker run public.ecr.aws/gravitational/teleport-plugin-msteams:13.3.7 version
    teleport-msteams v13.3.7 git:teleport-msteams-v13.3.7-api/14.0.0-gd1e081e 1.21
    ```

    For a list of available tags, visit [Amazon ECR Public Gallery](https://gallery.ecr.aws/gravitational/teleport-plugin-msteams).
  </Tab>

  <Tab title="From Source">
    To install from source you need `git` and `go` installed. If you do not have Go
    installed, visit the Go [downloads page](https://go.dev/dl/).

    ```code
    $ git clone https://github.com/gravitational/teleport-plugins.git
    $ cd teleport-plugins/access/msteams
    $ make
    ```

    Move the `teleport-msteams` binary into your PATH.

    Make sure the binary is installed:

    ```code
    $ teleport-msteams version
    teleport-msteams v13.3.7 git:teleport-msteams-v13.3.7-fffffffff go1.21
    ```
  </Tab>

  <Tab title="Helm Chart">
    {/*TODO: Replace this with the following partial once we fix
    gravitational/docs#299:
    docs/pages/kubernetes-access/helm/includes/helm-repo-add.mdx*/}

    Allow Helm to install charts that are hosted in the Teleport Helm repository:

    ```code
    $ helm repo add teleport https://charts.releases.teleport.dev
    ```

    Update the cache of charts from the remote repository:

    ```code
    $ helm repo update
    ```
  </Tab>
</Tabs>

## Step 3/9. Create a user and role for the plugin

Teleport's Access Request plugins authenticate to your Teleport cluster as a
user with permissions to list and read Access Requests. This way, plugins can
retrieve Access Requests from the Teleport Auth Service and present them to
reviewers.

Define a user and role called `access-plugin` by adding the following content to
a file called `access-plugin.yaml`:

```yaml
kind: role
version: v5
metadata:
  name: access-plugin
spec:
  allow:
    rules:
      - resources: ['access_request']
        verbs: ['list', 'read']
      - resources: ['access_plugin_data']
        verbs: ['update']
---
kind: user
metadata:
  name: access-plugin
spec:
  roles: ['access-plugin']
version: v2
```

Create the user and role:

```code
$ tctl create -f access-plugin.yaml
```

As with all Teleport users, the Teleport Auth Service authenticates the
`access-plugin` user by issuing short-lived TLS credentials. In this case, we
will need to request the credentials manually by *impersonating* the
`access-plugin` role and user.

If you are running a self-hosted Teleport Enterprise deployment and are using
`tctl` from the Auth Service host, you will already have impersonation
privileges.

To grant your user impersonation privileges for `access-plugin`, define a role
called `access-plugin-impersonator` by pasting the following YAML document into
a file called `access-plugin-impersonator.yaml`:

```yaml
kind: role
version: v5
metadata:
  name: access-plugin-impersonator
spec:
  allow:
    impersonate:
      roles:
      - access-plugin
      users:
      - access-plugin
```

Create the `access-plugin-impersonator` role:

```code
$ tctl create -f access-plugin-impersonator.yaml
```

If you are providing identity files to the plugin with Machine ID, assign the
`access-plugin` role to the Machine ID bot user. Otherwise, assign this role to
the user you plan to use to generate credentials for the `access-plugin` role
and user:

Assign the `access-plugin-impersonator` role to your Teleport user by running the appropriate
commands for your authentication provider:

<Tabs>
  <Tab title="Local User">
    1. Retrieve your local user's configuration resource:

       ```code
       $ tctl get users/$(tsh status -f json | jq -r '.active.username') > out.yaml
       ```

    2. Edit `out.yaml`, adding `access-plugin-impersonator` to the list of existing roles:

       ```diff
         roles:
          - access
          - auditor
          - editor
       +  - access-plugin-impersonator 
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f out.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="GitHub">
    1. Retrieve your `github` authentication connector:

       ```code
       $ tctl get github/github --with-secrets > github.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `github.yaml` file. Because this key contains a sensitive value, you should remove the
       github.yaml file immediately after updating the resource.

    2. Edit `github.yaml`, adding `access-plugin-impersonator` to the `teams_to_roles` section.

       The team you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the team must include your user account and
       should be the smallest team possible within your organization.

       Here is an example:

       ```diff
         teams_to_roles:
           - organization: octocats
             team: admins
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f github.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="SAML">
    1. Retrieve your `saml`  configuration resource:

       ```code
       $ tctl get --with-secrets saml/mysaml > saml.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `saml.yaml` file. Because this key contains a sensitive value, you should remove the
       saml.yaml file immediately after updating the resource.

    2. Edit `saml.yaml`, adding `access-plugin-impersonator` to the `attributes_to_roles` section.

       The attribute you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the group must include your
       user account and should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         attributes_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f saml.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="OIDC">
    1. Retrieve your `oidc`  configuration resource:

       ```code
       $ tctl get oidc/myoidc --with-secrets > oidc.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `oidc.yaml` file. Because this key contains a sensitive value, you should remove the
       oidc.yaml file immediately after updating the resource.

    2. Edit `oidc.yaml`, adding `access-plugin-impersonator` to the `claims_to_roles` section.

       The claim you should map to this role depends on how you have designed your organization's
       role-based access controls (RBAC). However, the group must include your user account and
       should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         claims_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```code
       $ tctl create -f oidc.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>
</Tabs>

You will now be able to generate signed certificates for the `access-plugin`
role and user.

## Step 4/9. Export the access plugin identity

Give the plugin access to a Teleport identity file. We recommend using Machine
ID for this in order to produce short-lived identity files that are less
dangerous if exfiltrated, though in demo deployments, you can generate
longer-lived identity files with `tctl`:

<Tabs>
  <Tab title="Machine ID">
    Configure `tbot` with an output that will produce the credentials needed by
    the plugin. As the plugin will be accessing the Teleport API, the correct
    output type to use is `identity`.

    For this guide, the `directory` destination will be used. This will write these
    credentials to a specified directory on disk. Ensure that this directory can
    be written to by the Linux user that `tbot` runs as, and that it can be read by
    the Linux user that the plugin will run as.

    Modify your `tbot` configuration to add an `identity` output.

    If running `tbot` on a Linux server, use the `directory` output to write
    identity files to the `/opt/machine-id` directory:

    ```yaml
    outputs:
    - type: identity
      destination:
        type: directory
        # For this guide, /opt/machine-id is used as the destination directory.
        # You may wish to customize this. Multiple outputs cannot share the same
        # destination.
        path: /opt/machine-id
    ```

    If running `tbot` on Kubernetes, write the identity file to Kubernetes secret
    instead:

    ```yaml
    outputs:
      - type: identity
        destination:
          type: kubernetes_secret
          name: teleport-plugin-msteams-identity
    ```

    If operating `tbot` as a background service, restart it. If running `tbot` in
    one-shot mode, execute it now.

    You should now see an `identity` file under `/opt/machine-id` or a Kubernetes
    secret named `teleport-plugin-msteams-identity`. This contains the private key and signed
    certificates needed by the plugin to authenticate with the Teleport Auth
    Service.
  </Tab>

  <Tab title="Long-lived identity files">
    Like all Teleport users, `access-plugin` needs signed credentials in order to
    connect to your Teleport cluster. You will use the `tctl auth sign` command to
    request these credentials.

    The following `tctl auth sign` command impersonates the `access-plugin` user,
    generates signed credentials, and writes an identity file to the local
    directory:

    ```code
    $ tctl auth sign --user=access-plugin --out=identity
    ```

    The plugin connects to the Teleport Auth Service's gRPC endpoint over TLS.

    The identity file, `identity`, includes both TLS and SSH credentials. The
    plugin uses the SSH credentials to connect to the Proxy Service, which
    establishes a reverse tunnel connection to the Auth Service. The plugin
    uses this reverse tunnel, along with your TLS credentials, to connect to the
    Auth Service's gRPC endpoint.

    <Accordion title="Certificate Lifetime">
      By default, `tctl auth sign` produces certificates with a relatively short
      lifetime. For production deployments, we suggest using [Machine
      ID](/ver/16.x/machine-id/introduction) to programmatically issue and renew
      certificates for your plugin. See our Machine ID [getting started
      guide](/ver/16.x/machine-id/getting-started) to learn more.

      Note that you cannot issue certificates that are valid longer than your existing credentials.
      For example, to issue certificates with a 1000-hour TTL, you must be logged in with a session that is
      valid for at least 1000 hours. This means your user must have a role allowing
      a `max_session_ttl` of at least 1000 hours (60000 minutes), and you must specify a `--ttl`
      when logging in:

      ```code
      $ tsh login --proxy=teleport.example.com --ttl=60060
      ```
    </Accordion>

    If you are running the plugin on a Linux server, create a data directory
    to hold certificate files for the plugin:

    ```code
    $ sudo mkdir -p /var/lib/teleport/api-credentials
    $ sudo mv identity /var/lib/teleport/plugins/api-credentials
    ```

    If you are running the plugin on Kubernetes, Create a Kubernetes secret
    that contains the Teleport identity file:

    ```code
    $ kubectl -n teleport create secret generic --from-file=identity teleport-plugin-msteams-identity
    ```

    Once the Teleport credentials expire, you will need to renew them by running the
    `tctl auth sign` command again.
  </Tab>
</Tabs>

## Step 5/9. Register an Azure Bot

The Access Request plugin for Microsoft Teams receives Access Request events from the
Teleport Auth Service, formats them into Microsoft Teams messages, and sends them to the
Microsoft Teams API to post them in your workspace. For this to work, you must register a
new Azure Bot. Azure Bot is a managed service by Microsoft that allows to
develop bots that interact with users through different channels, including
Microsoft Teams.

### Register a new Azure bot

Visit [https://portal.azure.com/#create/Microsoft.AzureBot](https://portal.azure.com/#create/Microsoft.AzureBot)
to create a new bot. Choose the bot handle so you can find the bot later in the Azure console (the bot handle will
not be displayed to the user or used to configure the Microsoft Teams plugin). Also edit the Azure subscription,
the resource group and the bot pricing tier.

In the "Microsoft App ID" section choose "Single Tenant" and "Create new
Microsoft App ID".

![Create Azure Bot](../../../../../assets/create-azure-bot-cdf8b721c5.png)

### Connect the bot to Microsoft Teams

Once the bot is created, open its resource page on the Azure console and
navigate to the "Channels" tab. Click "Microsoft Teams" and add the Microsoft Teams
channel.

The result should be as follows:

![Add Bot Channel](../../../../../assets/add-bot-channel-2b432bf182.png)

### Obtain information about your Microsoft App

On the bot's "Configuration" tab, copy and keep in a safe place the values of
"Microsoft App ID" and "App Tenant ID". Those two UUIDs will be used in the
plugin configuration.

Click the "Manage" link next to "Microsoft App ID". This will open the app management view.

![Manage Bot App](../../../../../assets/manage-bot-app-7cd51d56e7.png)

Then, go to the "Certificates & Secrets" section and choose to create a "New client secret".
Use the "Copy" icon to copy the newly created secret and keep it with the
previously recovered App ID and Tenant ID.

The client secret will be used by the Teleport plugin to authenticate as the bot's app when
searching users and posting messages.

### Specify the permissions used by the app

Still in the app management view ("Configuration", then "Manage" the Microsoft App ID),
go to the "API permissions" tab.

Add the following Microsoft Graph Application permissions:

| Permission name                                 | Reason                                                                                      |
| ----------------------------------------------- | ------------------------------------------------------------------------------------------- |
| `AppCatalog.Read.All`                           | Used to list Teams Apps and check the app is installed.                                     |
| `User.Read.All`                                 | Used to get notification recipients.                                                        |
| `TeamsAppInstallation.ReadWriteSelfForUser.All` | Used to initiate communication with a user that never interacted with the Teams App before. |
| `TeamsAppInstallation.ReadWriteSelfForTeam.All` | Used to discover if the app is installed in the Team.                                       |

At this point the app declares the required permissions but those have not been granted.

If you are an admin, click "Grant admin consent for \<directory name>". If you are not an admin,
contact an admin user to grant the permissions.

![Specify App Permissions](../../../../../assets/specify-app-permissions-6bdfb670ce.png)

Once permissions have been approved, refresh the page and check the approval status.
The result should be as follows:

![Granted App Permissions](../../../../../assets/granted-app-permissions-839a0def31.png)

## Step 6/9. Configure the Teleport Microsoft Teams plugin

At this point, the Teleport Microsoft Teams plugin has the credentials it needs to
communicate with your Teleport cluster and Azure APIs, but the app has not been
installed to Microsoft Teams yet.

In this step, you will configure the Microsoft Teams plugin to use the Azure
credentials and generate the Teams App package that will be used to install the
Microsoft Teams App. You will also configure the plugin to notify
the right Microsoft Teams users when it receives an Access Request update.

### Generate a configuration file and assets

Generate a configuration file for the plugin. The instructions depend on whether
you are deploying the plugin on a virtual machine or Kubernetes:

<Tabs>
  <Tab title="Virtual Machine">
    The Teleport Microsoft Teams plugin uses a config file in TOML format.  The
    `configure` subcommand generates the directory
    `/var/lib/teleport/plugins/msteams/assets` containing the TOML configuration
    file and an `app.zip` file that will be used later to add the Teams App into the
    organization catalog.

    Run the following command on your virtual machine:

    ```code
    $ export AZURE_APPID="your-appid"
    $ export AZURE_TENANTID="your-tenantid"
    $ export AZURE_APPSECRET="your-appsecret"
    $ teleport-msteams configure /var/lib/teleport/plugins/msteams/assets --appID "$AZURE_APPID" --tenantID "$AZURE_TENANTID" --appSecret "$AZURE_APPSECRET"
    ```

    This should result in a config file like the one below:

    ```toml
    # Example Microsoft Teams plugin configuration TOML file

    # If true, channels and users existence is checked on plugin start. When a
    # user is checked, the app is installed for the user if it was not
    # already. Installation can take up to 10 seconds per user. It is
    # advised to enable preloading unless you are sure all users already got
    # the app installed to avoid possible timeouts when treating an access request.
    preload = true

    [teleport]
    # Teleport Auth/Proxy Server address.
    # addr = "example.com:3025"
    #
    # Should be port 3025 for Auth Server and 3080 or 443 for Proxy.
    # For Teleport Cloud, should be in the form "your-account.teleport.sh:443".

    # Credentials generated with `tctl auth sign`.
    #
    # When using --format=file:
    # identity = "/var/lib/teleport/plugins/msteams/identity"   # Identity file
    # refresh_identity = true                                   # Refresh identity file periodically
    #
    # When using --format=tls:
    # client_key = "/var/lib/teleport/plugins/msteams/auth.key" # Teleport TLS secret key
    # client_crt = "/var/lib/teleport/plugins/msteams/auth.crt" # Teleport TLS certificate
    # root_cas = "/var/lib/teleport/plugins/msteams/auth.cas"   # Teleport CA certs
    addr = "localhost:3025"
    identity = "identity"
    refresh_identity = true

    [msapi]
    # MS API IDs. Please, check the documentation.
    app_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
    # Either contains the app secret or the path of a file containing the secret
    app_secret = "XXXXXXXXXXXXXXXXXXXXXX"
    tenant_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
    teams_app_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"

    [role_to_recipients]
    # Map roles to recipients.
    #
    # Provide msteams user email/id or channel URL recipients for access requests for specific roles.
    # role.suggested_reviewers will automatically be treated as additional email recipients.
    # "*" must be provided to match non-specified roles.
    #
    # "dev" = "devs-msteams-channel"
    # "*" = ["admin@email.com", "admin-msteams-channel"]
    "*" = ["foo@example.com"]

    [log]
    output = "stderr" # Logger output. Could be "stdout", "stderr" or "/var/lib/teleport/msteams.log"
    severity = "INFO" # Logger severity. Could be "INFO", "ERROR", "DEBUG" or "WARN".

    ```

    Copy the `/var/lib/teleport/plugins/msteams/assets/app.zip` file to your local
    computer. You will have to upload it to Microsoft Teams later.

    On the host where you will run the Microsoft Teams plugin, move the file
    `/var/lib/teleport/plugins/msteams/assets/teleport-msteams.toml` to
    `/etc/teleport-msteams.toml`. You can then edit the copy located in `/etc/`.
  </Tab>

  <Tab title="Kubernetes">
    Run the following command on your local machine:

    ```code
    $ export AZURE_APPID="your-appid"
    $ export AZURE_TENANTID="your-tenantid"
    $ export AZURE_APPSECRET="your-appsecret"
    $ teleport-msteams configure /var/lib/teleport/plugins/msteams/assets --appID "$AZURE_APPID" --tenantID "$AZURE_TENANTID" --appSecret "$AZURE_APPSECRET"
    ```

    This command generates an application archive at
    `/var/lib/teleport/plugins/msteams/assets/app.zip`. You will upload it to
    Microsoft Teams later in this guide.

    Create a file on your workstation called `teleport-msteams-helm.yaml` with the
    following content:

    ```yaml
    # Default values for slack.
    # This is a YAML-formatted file.
    # Declare variables to be passed into your templates.

    #
    # Plugin specific options
    #
    teleport:
      address: "teleport.example.com:443"
      identitySecretName: teleport-plugin-msteams-identity
      identitySecretPath: identity

    msTeams:
      appID: "APP_ID"
      tenantID: "TENANT_ID"
      teamsAppID: "TEAMS_APP_ID"

    roleToRecipients:
      "*": "TELEPORT_USERNAME"
      "editor": "TELEPORT_USERNAME"

    log:
      output: stdout
      severity: INFO

    ```

    You will edit this file in the next section.
  </Tab>
</Tabs>

<Warning>
  The `configure` command is not idempotent. It generates a new Microsoft Teams
  application UUID with each execution. It is not possible to use an `app.zip` and
  a TOML configuration generated by two different executions.
</Warning>

### Edit the configuration file

Edit the configuration file according to the instructions below.

#### `[teleport]`

The Microsoft Teams plugin uses this section to connect to your Teleport
cluster.

<Tabs>
  <Tab title="Executable or Docker">
    **`addr`**: Include the hostname and HTTPS port of your Teleport Proxy Service
    or Teleport Enterprise Cloud tenant (e.g., `teleport.example.com:443` or
    `mytenant.teleport.sh:443`).

    **`identity`**: Fill this in with the path to the identity file you exported
    earlier.

    **`client_key`**, **`client_crt`**, **`root_cas`**: Comment these out, since we
    are not using them in this configuration.
  </Tab>

  <Tab title="Helm Chart">
    **`address`**: Include the hostname and HTTPS port of your Teleport Proxy Service
    or Teleport Enterprise Cloud tenant (e.g., `teleport.example.com:443` or
    `mytenant.teleport.sh:443`).

    **`identitySecretName`**: Fill in the `identitySecretName` field with the name
    of the Kubernetes secret you created earlier.

    **`identitySecretPath`**: Fill in the `identitySecretPath` field with the path
    of the identity file within the Kubernetes secret. If you have followed the
    instructions above, this will be `identity`.
  </Tab>
</Tabs>

If you are providing credentials to the plugin using a `tbot` binary that runs
on a Linux server, make sure the value of `identity` is the same as the path of
the identity file you configured `tbot` to generate, `/opt/machine-id/identity`.

Configure the plugin to periodically reload the identity file, ensuring that it
does not attempt to connect to the Teleport Auth Service with expired
credentials.

Add the following to the `teleport` section of the configuration:

```toml
refresh_identity = true
```

#### `[msapi]`/`msTeams`

<Tabs>
  <Tab title="Executable or Docker">
    Make sure the `app_id`, `app_secret`, `tenant_id`, and `teams_app_id` fields are
    filled in with the correct information, which you obtained earlier in this
    guide.
  </Tab>

  <Tab title="Helm Chart">
    Make sure the `appID`, `tenantID`, and `teamsAppID` fields are filled in with
    the correct information, which you obtained earlier in this guide.
  </Tab>
</Tabs>

#### `[role_to_recipients]`

The `role_to_recipients` map (`roleToRecipients` for Helm users) configure the users and channels that the
Microsoft Teams plugin will notify when a user requests access to a specific role. When
the Microsoft Teams plugin receives an Access Request from the Auth Service, it will
look up the role being requested and identify the Microsoft Teams users and channels to
notify.

<Tabs>
  <Tab title="Executable or Docker">
    Here is an example of a `role_to_recipients` map:

    ```toml
    [role_to_recipients]
    "*" = "alice@example.com"
    "dev" = ["alice@example.com", "bob@example.com"]
    "dba" = "https://teams.microsoft.com/l/channel/19%3somerandomid%40thread.tacv2/ChannelName?groupId=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx&tenantId=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
    ```
  </Tab>

  <Tab title="Helm Chart">
    Here is an example of a `role_to_recipients` map:

    ```toml
    roleToRecipients:
      "*": "alice@example.com"
      "dev": ["alice@example.com", "bob@example.com"]
      "dba": "https://teams.microsoft.com/l/channel/19%3somerandomid%40thread.tacv2/ChannelName?groupId=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx&tenantId=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
    ```
  </Tab>
</Tabs>

In the `role_to_recipients` map, each key is the name of a Teleport role. Each
value configures the Teams user (or users) to notify. The value can be a single
string or an array of strings. Each string must be either the email address of
a Microsoft Teams user or a channel URL.

You can find the URL of a channel by opening the channel and clicking the button
"Get link to channel":

![Copy Teams Channel](../../../../../assets/copy-teams-channel-9c0f76c322.png)

The `role_to_recipients` map must also include an entry for `"*"`, which the
plugin looks up if no other entry matches a given role name. In the example
above, requests for roles aside from `dev` and `dba` will notify `alice@example.com`.

<Accordion title="Suggested reviewers">
  Users can suggest reviewers when they create an Access Request, e.g.,:

  ```code
  $ tsh request create --roles=dbadmin --reviewers=alice@example.com,ivan@example.com
  ```

  If an Access Request includes suggested reviewers, the Microsoft Teams plugin will add
  these to the list of channels to notify. If a suggested reviewer is an email
  address, the plugin will look up the the direct message channel for that
  address and post a message in that channel.
</Accordion>

Configure the Microsoft Teams plugin to notify you when a user requests the `editor` role
by adding the following to your `role_to_recipients` config (replace
`TELEPORT_USERNAME` with the email of the user you assigned the `editor-reviewer`
role earlier):

<Tabs>
  <Tab title="Executable or Docker">
    ```toml
    [role_to_recipients]
    "*" = "TELEPORT_USERNAME"
    "editor" = "TELEPORT_USERNAME"
    ```
  </Tab>

  <Tab title="Helm Chart">
    ```toml
    roleToRecipients:
      "*": "TELEPORT_USERNAME"
      "editor": "TELEPORT_USERNAME"
    ```
  </Tab>
</Tabs>

The final configuration file should resemble the following:

<Tabs>
  <Tab title="Executable or Docker">
    ```toml
    # Example Microsoft Teams plugin configuration TOML file

    # If true, channels and users existence is checked on plugin start. When a
    # user is checked, the app is installed for the user if it was not
    # already. Installation can take up to 10 seconds per user. It is
    # advised to enable preloading unless you are sure all users already got
    # the app installed to avoid possible timeouts when treating an access request.
    preload = true

    [teleport]
    # Teleport Auth/Proxy Server address.
    # addr = "example.com:3025"
    #
    # Should be port 3025 for Auth Server and 3080 or 443 for Proxy.
    # For Teleport Cloud, should be in the form "your-account.teleport.sh:443".

    # Credentials generated with `tctl auth sign`.
    #
    # When using --format=file:
    # identity = "/var/lib/teleport/plugins/msteams/identity"   # Identity file
    # refresh_identity = true                                   # Refresh identity file periodically
    #
    # When using --format=tls:
    # client_key = "/var/lib/teleport/plugins/msteams/auth.key" # Teleport TLS secret key
    # client_crt = "/var/lib/teleport/plugins/msteams/auth.crt" # Teleport TLS certificate
    # root_cas = "/var/lib/teleport/plugins/msteams/auth.cas"   # Teleport CA certs
    addr = "localhost:3025"
    identity = "identity"
    refresh_identity = true

    [msapi]
    # MS API IDs. Please, check the documentation.
    app_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
    # Either contains the app secret or the path of a file containing the secret
    app_secret = "XXXXXXXXXXXXXXXXXXXXXX"
    tenant_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
    teams_app_id = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"

    [role_to_recipients]
    # Map roles to recipients.
    #
    # Provide msteams user email/id or channel URL recipients for access requests for specific roles.
    # role.suggested_reviewers will automatically be treated as additional email recipients.
    # "*" must be provided to match non-specified roles.
    #
    # "dev" = "devs-msteams-channel"
    # "*" = ["admin@email.com", "admin-msteams-channel"]
    "*" = ["foo@example.com"]

    [log]
    output = "stderr" # Logger output. Could be "stdout", "stderr" or "/var/lib/teleport/msteams.log"
    severity = "INFO" # Logger severity. Could be "INFO", "ERROR", "DEBUG" or "WARN".

    ```
  </Tab>

  <Tab title="Helm Chart">
    ```yaml
    # Default values for slack.
    # This is a YAML-formatted file.
    # Declare variables to be passed into your templates.

    #
    # Plugin specific options
    #
    teleport:
      address: "teleport.example.com:443"
      identitySecretName: teleport-plugin-msteams-identity
      identitySecretPath: identity

    msTeams:
      appID: "APP_ID"
      tenantID: "TENANT_ID"
      teamsAppID: "TEAMS_APP_ID"

    roleToRecipients:
      "*": "TELEPORT_USERNAME"
      "editor": "TELEPORT_USERNAME"

    log:
      output: stdout
      severity: INFO

    ```
  </Tab>
</Tabs>

## Step 7/9. Add and configure the Teams App

### Upload the Teams App

Open Microsoft Teams and go to "Apps", "Manage your apps", then in the additional
choices menu choose "Upload an App".

![Upload Teams App](../../../../../assets/upload-teams-app-23d60bd430.png)

If you're a Teams admin, choose "Upload an app to your org's app catalog".
This will allow you to skip the approval step.
If you're not a Microsoft Teams admin, choose "Submit an app to your org".

Upload the `app.zip` file you generated earlier.

### Approve the Teams App

If you are not a Teams admin and chose "Submit an app to your org",
you will have to ask a Teams admin to approve it.

They can do so by connecting to the
[Teams admin dashboard](https://admin.teams.microsoft.com/policies/manage-apps),
searching "TeleBot", selecting it and choosing "Allow".

![Upload Teams App](../../../../../assets/allowed-teams-app-92414f5f7e.png)

### Add the Teams App to a Team

Once the app is approved it should appear in the "Apps built for your org" section.
Add the newly uploaded app to a team. Open the app, click "Add to a team",
choose the "General" channel of your team and click "Set up a bot".

![Add Teams App](../../../../../assets/add-teams-app-92607f7ce7.png)

Note: Once an app is added to a team, it can post on all channels.

## Step 8/9. Test the Teams App

Once Teleport is running, you've created the Teams App, and the plugin is
configured, you can now run the plugin and test the workflow.

### Test Microsoft Teams connectivity

Start the plugin in validation mode:

```code
$ teleport-msteams validate <email of your teams account>
```

If everything works fine, the log output should look like this:

```text
teleport-msteams v13.3.7 go1.21

 - Checking application xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx status...
 - Application found in the team app store (internal ID: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx)
 - User xxxxxx@xxxxxxxxx.xxx found: xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 - Application installation ID for user: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 - Chat ID for user: 19:xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx_xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx@unq.gbl.spaces
 - Chat web URL: https://teams.microsoft.com/l/chat/19%3Axxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx_xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx%40unq.gbl.spaces/0?tenantId=xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
 - Hailing the user...
 - Message sent, ID: XXXXXXXXXXXXX

Check your MS Teams!
```

The plugin should exit and you should have received two messages through Microsoft Teams.

![Validate Bot Message](../../../../../assets/validate-bot-message-a3b391c86b.png)

### Start the MS Teams Plugin

After you configured and validated the MS Teams plugin, you can now run the
plugin and test the workflow.

<Tabs>
  <Tab title="Executable">
    Run the following command to start the Teleport MS Teams plugin.  The `-d` flag
    will provide debug information to ensure that the plugin can connect to MS Teams
    and your Teleport cluster:

    ```code
    $ teleport-msteams start -d
    DEBU   DEBUG logging enabled msteams/main.go:120
    INFO   Starting Teleport MS Teams Plugin 13.3.7: msteams/app.go:74
    DEBU   Attempting GET teleport.example.com:443/webapi/find webclient/webclient.go:129
    DEBU   Checking Teleport server version msteams/app.go:242
    INFO   MS Teams app found in org app store id:292e2881-38ab-7777-8aa7-cefed1404a63 name:TeleBot msteams/app.go:179
    INFO   Preloading recipient data... msteams/app.go:185
    INFO   Recipient found, chat found chat_id:19:a8c06deb-aa2b-4db5-9c78-96e48f625aef_a36aec2e-f11c-4219-b79a-19UUUU57de70@unq.gbl.spaces kind:user recipient:jeff@example.com msteams/app.go:195
    INFO   Recipient data preloaded and cached. msteams/app.go:198
    DEBU   Watcher connected watcherjob/watcherjob.go:121
    INFO   Plugin is ready msteams/app.go:227
    ```
  </Tab>

  <Tab title="Docker">
    Run the plugin:

    ```code
    $ docker run -v <path-to-config>:/etc/teleport-msteams.toml public.ecr.aws/gravitational/teleport-plugin-msteams:15.0.0-dev start
    ```
  </Tab>

  <Tab title="Helm Chart">
    Install the plugin:

    ```code
    $ helm upgrade --install teleport-plugin-msteams teleport/teleport-plugin-msteams --values teleport-msteams-helm.yaml
    ```

    To inspect the plugin's logs, use the following command:

    ```code
    $ kubectl logs deploy/teleport-plugin-msteams
    ```

    Debug logs can be enabled by setting `log.severity` to `DEBUG` in
    `teleport-msteams-helm.yaml` and executing the `helm upgrade ...` command
    above again. Then you can restart the plugin with the following command:

    ```code
    $ kubectl rollout restart deployment teleport-plugin-msteams
    ```
  </Tab>
</Tabs>

### Create an Access Request

Create an Access Request and check if the plugin works as expected with the
following steps.

<Tabs>
  <Tab title="As an Admin">
    A Teleport admin can create an Access Request for another user with `tctl`:

    ```code
    $ tctl request create myuser --roles=editor
    ```
  </Tab>

  <Tab title="As a User">
    Users can use `tsh` to create an Access Request and log in with approved roles:

    ```code
    $ tsh request create --roles=editor
    Seeking request approval... (id: 8f77d2d1-2bbf-4031-a300-58926237a807)
    ```
  </Tab>

  <Tab title="From the Web UI">
    Users can request access using the Web UI by visiting the "Access Requests"
    tab and clicking "New Request":

    ![Creating an Access Request using the Web UI](../../../../../assets/request-access-989f648dce.png)
  </Tab>
</Tabs>

The user you configured earlier to review the request should receive a direct
message from "TeleBot" in Microsoft Teams allowing them to visit a link in the Teleport
Web UI and either approve or deny the request.

### Resolve the request

Once you receive an Access Request message, click the link to visit Teleport and
approve or deny the request:

![Reviewing a request](../../../../../assets/review-request-a35de046df.png)

<Accordion title="Reviewing from the command line">
  You can also review an Access Request from the command line:

  <Tabs>
    <Tab title="As an Admin">
      ```code
      # Replace REQUEST_ID with the id of the request
      $ tctl request approve REQUEST_ID
      $ tctl request deny REQUEST_ID
      ```
    </Tab>

    <Tab title="As a User">
      ```code
      # Replace REQUEST_ID with the id of the request
      $ tsh request review --approve REQUEST_ID
      $ tsh request review --deny REQUEST_ID
      ```
    </Tab>
  </Tabs>
</Accordion>

Once the request is resolved, the Microsoft Teams bot will update the Access Request message
to reflect its new status.

<Note>
  When the Microsoft Teams plugin posts an Access Request notification to a channel, anyone
  with access to the channel can view the notification and follow the link. While
  users must be authorized via their Teleport roles to review Access Requests, you
  should still check the Teleport audit log to ensure that the right users are
  reviewing the right requests.

  When auditing Access Request reviews, check for events with the type `Access
  Request Reviewed` in the Teleport Web UI.
</Note>

## Step 9/9. Set up systemd

This section is only relevant if you are running the Teleport Microsoft Teams
plugin on a virtual machine.

In production, we recommend starting the Teleport plugin daemon via an init
system like systemd.  Here's the recommended Teleport plugin service unit file
for systemd:

```ini
[Unit]
Description=Teleport MsTeams Plugin
After=network.target

[Service]
Type=simple
Restart=on-failure
ExecStart=/usr/local/bin/teleport-msteams start --config=/etc/teleport-msteams.toml
ExecReload=/bin/kill -HUP $MAINPID
PIDFile=/run/teleport-msteams.pid

[Install]
WantedBy=multi-user.target

```

Save this as `teleport-msteams.service` in either `/usr/lib/systemd/system/` or
another [unit file load
path](https://www.freedesktop.org/software/systemd/man/systemd.unit.html#Unit%20File%20Load%20Path)
supported by systemd.

Enable and start the plugin:

```code
$ sudo systemctl enable teleport-msteams
$ sudo systemctl start teleport-msteams
```

## Next steps

- Read our guides to configuring [Resource Access
  Requests](/ver/16.x/access-controls/access-requests/resource-requests) and [Role Access
  Requests](/ver/16.x/access-controls/access-requests/role-requests) so you can get the most out
  of your Access Request plugins.
